<resources>
    <string name="app_name">RefreshBody</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="navigation_item">Navigation Item</string>
    <string name="drink_intake">INTAKE:0 ml</string>
    <string name="name_drink">Drink:</string>
    <string name="amount">Amount</string>
    <string name="ml">ml</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="custom_cup">Custom Cup</string>
    <string name="validate_add_cup">The amount should be greater than 0</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Notification">Notification</string>
    <string name="reminder_plan">Reminder Plan</string>
    <string name="reminder_sound">Reminder Sound</string>
    <string name="vibration">Vibration</string>

    <string name="action_cancel">Cancel</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_about">About</string>

    <string name="loading">Loading</string>

    <string name="main_list_empty_msg">Press \'+\' button to create new plan</string>

    <string name="on">On</string>
    <string name="off">Off</string>


    <string name="every_day">Every Day</string>
    <string name="once_time">Once Time</string>
    <string name="select_cup">Select Cup</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="new_here_create_account">Create new account</string>
    <string name="sign_up">Sign Up</string>
    <string name="validate_name_cup">Please check your cup name</string>

    <string-array name="day_name">
        <item>Su</item>
        <item>Mo</item>
        <item>Tu</item>
        <item>We</item>
        <item>Th</item>
        <item>Fr</item>
        <item>Sa</item>
    </string-array>
    <string name="title_activity_drink_report">DrinkReportActivity</string>

    <string-array name="reminder_mode">
        <item>Drink Reminder</item>
        <item>Rest Reminder</item>
        <item>Other</item>
    </string-array>

    <string-array name="working_time">
        <item>1 hour</item>
        <item>2 hours</item>
        <item>3 hours</item>
    </string-array>

    <string name="reminder_rest">Rest Reminder</string>
    <string name="reminder_mode">Reminder mode</string>
    <string name="label">Label</string>
    <string name="content">Note</string>
    <string name="time_job">Working Time</string>
    <string name="rest_plan">Rest Reminder</string>
    <string name="other_reminder">Other Reminder</string>
    <string name="please_fill_info">Please fill info to get started</string>
    <string name="set_weight">Set Weight</string>
    <string name="check_credential">Please check your credential</string>
    <string name="enter_detail">Please enter your detail information</string>
    <string name="general">General</string>
    <string name="other">Other</string>
    <string name="feedback">Feedback</string>
    <string name="share">Share with friend</string>
    <string name="rate_us">Rate us</string>
    <string name="settings">Settings</string>
    <string name="contact_developer_uri">mailto:isbk@gmail.com</string>
    <string name="uri_app_store">http://play.google.com/</string>
    <string name="backup">Backup Record</string>
    <string name="restore_record">Restore Record</string>
    <string name="go_to_main">Go To MainActivity</string>

</resources>
