<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tv_select_cup_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_cup"
        android:layout_marginBottom="@dimen/_10sdp"
        android:textColor="@color/colorPrimary"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview_cup_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_select_cup_image">
    </android.support.v7.widget.RecyclerView>
    <LinearLayout
        android:id="@+id/layout_choose_name_drink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/recyclerview_cup_image">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_drink"
            android:textColor="@color/colorPrimary"
            android:layout_marginRight="@dimen/_10sdp"/>
        <EditText
            android:id="@+id/edittext_choose_cup_name"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_choose_amount_drink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/layout_choose_name_drink">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textColor="@color/colorPrimary"
            android:layout_marginRight="@dimen/_10sdp"/>
        <EditText
            android:id="@+id/edittext_choose_cup_amount"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:inputType="number"
            android:layout_marginRight="@dimen/_10sdp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ml"
            android:textColor="@color/colorPrimary"
            android:layout_marginRight="@dimen/_10sdp"/>
    </LinearLayout>
    <TextView
        android:id="@+id/tv_cancel_choose_cup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_below="@id/layout_choose_amount_drink"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/_20sdp"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="@dimen/_10sdp"/>
    <TextView
        android:id="@+id/tv_ok_choose_cup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:layout_below="@id/layout_choose_amount_drink"
        android:layout_toLeftOf="@id/tv_cancel_choose_cup"
        android:layout_marginRight="@dimen/_10sdp"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="@dimen/_10sdp"/>
</RelativeLayout>