<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/tv_please_input_info_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_fill_info"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_15sdp"
        android:layout_margin="@dimen/_10sdp"/>
    <TextView
        android:id="@+id/tv_set_weight"
        android:layout_below="@id/tv_please_input_info_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_weight"
        android:layout_margin="@dimen/_10sdp"
        android:textSize="@dimen/_15sdp"/>
    <RelativeLayout
        android:layout_below="@id/tv_set_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/img_weight_welcome"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:src="@drawable/ic_weight"
            android:layout_margin="@dimen/_10sdp"/>
        <EditText
            android:id="@+id/edittext_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/img_weight_welcome"
            android:layout_centerVertical="true"
            android:text="65"
            android:inputType="number"
            android:textSize="@dimen/_15sdp"
            android:layout_margin="@dimen/_10sdp"/>
        <TextView
            android:id="@+id/tv_kg_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="kg"
            android:layout_toRightOf="@id/edittext_weight"
            android:layout_centerVertical="true"
            android:textSize="@dimen/_15sdp"/>
        <ImageView
            android:id="@+id/img_target_welcome"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:src="@drawable/ic_target"
            android:layout_toRightOf="@id/tv_kg_welcome"
            android:layout_margin="@dimen/_10sdp"/>
        <TextView
            android:id="@+id/tv_target_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/img_target_welcome"
            android:layout_centerVertical="true"
            android:text="2000"
            android:textSize="@dimen/_15sdp"
            android:layout_margin="@dimen/_10sdp"/>
        <TextView
            android:id="@+id/tv_ml_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ml"
            android:layout_toRightOf="@id/tv_target_amount"
            android:layout_centerVertical="true"
            android:textSize="@dimen/_15sdp"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/tv_cancel_welcome"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/_20sdp"
        android:paddingLeft="@dimen/_40sdp"
        android:paddingRight="@dimen/_40sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:background="@drawable/custom_button_gray"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tv_ok_welcome"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:paddingLeft="@dimen/_40sdp"
        android:paddingRight="@dimen/_40sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:gravity="center"
        android:background="@drawable/custom_button_ok"
        android:layout_alignBaseline="@+id/tv_cancel_welcome"
        android:layout_alignBottom="@+id/tv_cancel_welcome"
        android:layout_toRightOf="@+id/tv_cancel_welcome"
        android:layout_toEndOf="@+id/tv_cancel_welcome" />
</RelativeLayout>